--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.Cardapio_Padoka"
         tools:targetApi="31">
         <activity
+            android:name="View.Telaconclusao"
+            android:exported="false" />
+        <activity
+            android:name="View.Itemdetalhe"
+            android:exported="false" />
+        <activity
             android:name="View.CardapioActivity"
             android:exported="false" />
         <activity
