--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,15 @@
         android:theme="@style/Theme.Cardapio_Padoka"
         tools:targetApi="31">
         <activity
+            android:name=".RedefinirSenhaActivity"
+            android:exported="false" />
+        <activity
+            android:name="login.CadastrarUsuarioActivity"
+            android:exported="false" />
+        <activity
+            android:name="login.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name="View.Telaconclusao"
             android:exported="false" />
         <activity
