--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Cardapio_Padoka"
         tools:targetApi="31">
         <activity
-            android:name=".RedefinirSenhaActivity"
+            android:name="login.RedefinirSenhaActivity"
             android:exported="false" />
         <activity
             android:name="login.CadastrarUsuarioActivity"
