Introduzido a logica de autenticao nos arquivos do LoginActivity, CadastrarUsuarioActivity e RedefinirSenhaActivity. Alem de inserir as cores usadas em outras partes do projeto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.Cardapio_Padoka"
         tools:targetApi="31">
         <activity
-            android:name="login.RedefinirSenhaActivity"
+            android:name="autenticar_user.redefinirSenha.RedefinirSenhaActivity"
             android:exported="false" />
         <activity
-            android:name="login.CadastrarUsuarioActivity"
+            android:name="autenticar_user.cadastro.CadastrarUsuarioActivity"
             android:exported="false" />
         <activity
-            android:name="login.LoginActivity"
+            android:name="autenticar_user.login.LoginActivity"
             android:exported="false" />
         <activity
             android:name="View.Telaconclusao"
