--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,7 +13,10 @@
         android:roundIcon="@drawable/padoka_fivecon_72x72px"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cardapio_Padoka"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name="View.CarrinhoActivity"
+            android:exported="false" />
         <activity
             android:name="carrinho_compra.ItemCarrinhoActivity"
             android:exported="false" />
@@ -30,7 +33,7 @@
             android:name="autenticar_user.login.LoginActivity"
             android:exported="false" />
         <activity
-            android:name="View.CarrinhoActivity"
+            android:name="View.CarrinhosActivity"
             android:exported="false" />
         <activity
             android:name="View.Itemdetalhe"
@@ -41,7 +44,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Cardapio_Padoka">
+            android:theme="@style/Theme.Cardapio_Padoka" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
