--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Cardapio_Padoka"
         tools:targetApi="31" >
         <activity
-            android:name="View.CarrinhoActivity"
+            android:name="carrinho_compra.CarrinhoActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
             android:exported="false" />
         <activity
